# CostDistance_IDW

./: .gitignore  CMakeLists.txt  README.md  Tratamiento_datos.cpp  Tratamiento_datos.h  common.h  main.cpp  raster.cpp  raster.h
CUDA/CUDA_CD_IDW/: CMakeLists.txt  Raster.cpp  Raster.h  fricc_v.tif  fricc_w.tif.aux.xml  locs_c_v.tif  locs_c_v.tif.aux.xml  locs_c_w.tif.aux.xml  main.cu
Datasets/Haití/: Haiti_fricc.tif
Datasets/RepDom/: RD_fricc.tif
Datasets/Salta/: Salta_biomass.tif  Salta_fricc.tif
Latest_OMP/: Raster.cpp  fricc_w.tif  locs_c_w.tif  main-old.cpp  main.cpp
OMP/: main.cpp
OMP_skiping_years/: main.cpp
OMP_skiping_years_start_end/: CMakeLists.txt  Methods_IDW_CD.cpp  main.cpp
OMP_specificYear/: CMakeLists.txt  Methods_IDW_CD.h  common.h  main.cpp
OpenMP/: generateBaU_v_w.ipynb
OpenMP/data/: fricc_v.tif  fricc_w.tif  fwuse_W01.csv
OpenMP/src/: Metodos.cpp  Metodos.h  Raster.cpp  Raster.h  main.cpp
OpenMP/src/data/: IDWexp.txt  fwuse_W01.csv  locs_c.tif
OpenMP_Mloc/src/: CMakeLists.txt  Raster.cpp  Raster.h  common.h  main.cpp
SRC/Src CostDistance/: distance.h
SRC/openMP-CODE/: CMakeLists.txt  IDW.cpp
Src CostDistance/: DisplayImage.cpp
Src/Compresed Files/: OpenMP.rar
TMP/Datasets/Recortes/: Haiti_biomass_Clip.tif  Haiti_fricc_Clip.tif  Honduras_biomass_Clip.tif  Honduras_fricc_Clip.tif  Karnataka_biomass_Clip.tif  Karnataka_fricc_Clip.tif
TMP/OpenMP_Mloc/src/: Raster.cpp  Raster.h
TMP/OpenMP_Mloc/src/data/: fwuse_V01.csv
TMP/SRC/Src CostDistance/: distance.cpp  main.cpp
TMP/SRC/cost_distance/: fwuse_W01.csv  raster.cpp  raster.h  raster_cost_dist.h
TMP/SRC/openMP-CODE/: common.h  cost_dist.cpp  cost_dist.h  main.cpp  raster.h
TMP/docs/: hacer funciona gdal, terminal, nodo.txt  index.md
cost_distance/: CMakeLists.txt  main.cpp  raster.cpp  raster.h  raster_cost_dist.cpp  raster_cost_dist.h
docs/: index.md
openMP-CODE/: IDW.cpp  IDW.h  common.h  cost_dist.cpp  cost_dist.h  main.cpp  raster.cpp
